--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "buttercoin-node": "^1.0.0",
-    "mongodb": "^1.4.31"
+    "mongodb": "^1.4.31",
+    "mongoose": "^3.8.23"
   },
   "devDependencies": {},
   "repository": {
